Mon Jan 25 23:39:50 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MTAConfig.pm: Add beginnings of qmail code.  Not actually
 	enabled yet.

	* lib/Majordomo.pm (substitute_vars_string): Allow \$ and \\
 	escapes.  Fix up help files to double backslashes where necessary.

Sun Jan 24 23:01:47 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* Makefile.PL: Big split: move Q&A stuff out into separate files.

	* postinstall (do_default_config): Mistakenly used site_password
 	where master_password belonged.  Remove query routines and use the
 	sile split from Makefile.PL.

Sat Jan 23 18:17:11 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Access.pm (_a_default): 'closed' access means deny, not
 	consult.

	* lib/Majordomo.pm (show): Add security; split off _show function.
  	Remove address validity testing; the dispatcher does that for us.

	* lib/Mj/Format.pm (show): Handle stalled shows.

	* lib/Majordomo.pm (which): Stalled requests have $mac_hits < 0,
 	but this wasn't handled correctly.

Thu Jan 14 00:30:19 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (_register): Generate a password if the one
 	passed in is empty or undefined.

	* lib/Mj/TextOutput.pm (register): Random password is the default;
 	must use 'password' mode to supply a password.

Wed Jan 13 00:29:48 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* postinstall: Call do_default_config properly to get reasonable
 	defaults that don't override domain owners' configurations.

Mon Jan 11 00:49:44 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* postinstall (do_default_config): New function; fill in
 	appropriate defaults from initial configuration instructions.

	* lib/Mj/List.pm (_fill_aux): The suffix representing the database
 	backend is not part of the sublist name.

	* lib/Mj/Config.pm: Remove require of defaults.

Sun Jan 10 00:42:03 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
